[package]
name = "remake"
version = "0.1.0"
edition = "2021"
authors = [
    "Josh Burns <josh@joshburns.xyz>"
]
description = "Task runner for the 21st century"
homepage = "https://github.com/joshburnsxyz/remake"
repository = "https://github.com/joshburnsxyz/remake"
license = "GNU GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
identifier = "xyz.joshburns.remake"
linux_use_terminal = true
category = "Developer Tool"

[dependencies]
clap = "4.3.4"
serde =  { version = "1.0", features = ["derive"] }
toml = "0.7.4"
